Add browser extensions
Initial version of new Chrome and Firefox extensions. Exclude compiled
versions from Git.

--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,18 @@ pip-log.txt
 #################
 
 *~
+
+
+#################
+## Chrome
+#################
+
+*.crx
+*.pem
+
+
+#################
+## Firefox
+#################
+
+*.xpi
