--- a/extensions/belen-chrome/manifest.json
+++ b/extensions/belen-chrome/manifest.json
@@ -1,9 +1,15 @@
 {
   "name": "Belen Enhancer for Chrome",
-  "version": "1.5.0.1",
-  "description": "Fixes various annoyances in Belen",
+  "version": "1.6.0.0",
+  "description": "Fixes various annoyances in Belen.",
   "content_scripts": [ {
-    "js": [ "jquery-1.7.2.min.js", "background.js" ],
-    "matches": [ "http://cs.gumtree.com.au/*"]
+    "js": [ "jquery-1.7.2.min.js", "replyts_jumptomessage.js" ],
+    "matches": [ "http://cs.gumtree.com.au/replyts/screening.do*"],
+    "run_at": "document_start"
+  },
+  {
+    "js": [ "background.js" ],
+    "matches": [ "http://cs.gumtree.com.au/*"],
+    "run_at": "document_idle"
   }]
 }
