Add jQuery highlighting plugin

--- a/extensions/belen-chrome/manifest.json
+++ b/extensions/belen-chrome/manifest.json
@@ -13,7 +13,7 @@
     "run_at": "document_start"
   },
   {
-    "js": [ "background.js" ],
+    "js": [ "jquery.highlight-3.yui.js", "background.js" ],
     "matches": [ "http://cs.gumtree.com.au/*"],
     "run_at": "document_idle"
   }]
