Clearer category list in Chrome
Colour code and indent category list to make it easier to use. Does not
work in Firefox because it relies on the existence of the "beforeload"
event, which is Webkit-only.

--- a/extensions/belen-chrome/manifest.json
+++ b/extensions/belen-chrome/manifest.json
@@ -13,6 +13,11 @@
     "run_at": "document_start"
   },
   {
+    "js": [ "category_list.js" ],
+    "matches": [ "http://cs.gumtree.com.au/searchAds.do*"],
+    "run_at": "document_start"
+  },
+  {
     "js": [ "background.js" ],
     "matches": [ "http://cs.gumtree.com.au/*"],
     "run_at": "document_idle"
