Remove jQuery dependency
Instead of relying on an included version of jQuery: 1) use the version
in unsafeWindow, if we have access to that; 2) otherwise, inject the
main function into the page and run it in the page context; 3) for pages
that do not have jQuery in them already, add it in, wait for it to load,
and then use it when it's done loading.

--- a/extensions/belen-chrome/manifest.json
+++ b/extensions/belen-chrome/manifest.json
@@ -1,25 +1,22 @@
 {
-  "name": "Belen Enhancer for Chrome",
-  "version": "1.7.0.1",
-  "description": "Fixes various annoyances in Belen.",
-  "content_scripts": [ {
-    "js": [ "jquery-1.7.2.min.js" ],
-    "matches": [ "http://cs.gumtree.com.au/*"],
-    "run_at": "document_start"
-  },
-  {
-    "js": [ "replyts_jumptomessage.js" ],
-    "matches": [ "http://cs.gumtree.com.au/replyts/screening.do*"],
-    "run_at": "document_start"
-  },
-  {
-    "js": [ "category_list.js" ],
-    "matches": [ "http://cs.gumtree.com.au/searchAds.do*"],
-    "run_at": "document_start"
-  },
-  {
-    "js": [ "background.js" ],
-    "matches": [ "http://cs.gumtree.com.au/*"],
-    "run_at": "document_idle"
-  }]
+	"name": "Belen Enhancer for Chrome",
+	"version": "1.8.0.0",
+	"description": "Fixes various annoyances in Belen.",
+	"content_scripts": [ 
+		{
+			"js": [ "replyts_jumptomessage.js" ],
+			"matches": [ "http://cs.gumtree.com.au/replyts/screening.do*" ],
+			"run_at": "document_start"
+		},
+		{
+			"js": [ "category_list.js" ],
+			"matches": [ "http://cs.gumtree.com.au/searchAds.do*" ],
+			"run_at": "document_start"
+		},
+		{
+			"js": [ "background.js" ],
+			"matches": [ "http://cs.gumtree.com.au/*" ],
+			"run_at": "document_idle"
+		}
+	]
 }
