--- a/extensions/belen-chrome/manifest.json
+++ b/extensions/belen-chrome/manifest.json
@@ -1,4 +1,5 @@
 {
+	"manifest_version": 2,
 	"name": "Belen Enhancer for Chrome",
 	"version": "1.8.0.0",
 	"description": "Fixes various annoyances in Belen.",
