Introduce jQuery.hook
Add the ability to attach events to jQuery methods.  This will be useful
for various things in future versions, such as checking for the addition
of the blocked class on machine IDs.

--- a/extensions/belen-chrome/manifest.json
+++ b/extensions/belen-chrome/manifest.json
@@ -15,7 +15,7 @@
 			"run_at": "document_start"
 		},
 		{
-			"js": [ "background.js" ],
+			"js": [ "jquery.hook.js", "background.js" ],
 			"matches": [ "http://cs.gumtree.com.au/*" ],
 			"run_at": "document_idle"
 		}
