Use setData event for deletion prompt insertion
Instead of hooking onto all data calls (which resulted in execution on
every page scroll event), just look at setData. Make runUnbound()
generic and deal with multiple arguments (as is the case with setData,
which passes the key and the value as well as the event object).

--- a/extensions/belen-chrome/manifest.json
+++ b/extensions/belen-chrome/manifest.json
@@ -17,7 +17,7 @@
 		{
 			"js": [ "jquery.hook.js", "background.js" ],
 			"matches": [ "http://cs.gumtree.com.au/*" ],
-			"run_at": "document_idle"
+			"run_at": "document_end"
 		}
 	]
 }
