--- a/extensions/belen-chrome/manifest.json
+++ b/extensions/belen-chrome/manifest.json
@@ -16,7 +16,7 @@
 		},
 		{
 			"js": [ "jquery.hook.js", "background.js" ],
-			"matches": [ "http://cs.gumtree.com.au/*" ],
+			"matches": [ "http://cs.gumtree.com.au/*", "*://help.gumtree.com.au/*" ],
 			"run_at": "document_end"
 		}
 	]
